--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
       background: #ffffff;
     }
     h1 { font-size: 20px; margin: 0; }
-    main { padding: 20px; display: grid; gap: 16px; max-width: 920px; margin: 0 auto; }
+    main { padding: 20px; display: grid; place-content: center; gap: 16px; min-height: calc(100svh - 120px); }
     .card {
-      display: grid;
-      gap: 10px;
-      padding: 16px;
+      display: block;
+      padding: 12px 14px;
       background: #ffffff;
       border: 1px solid #e5e7eb;
-      border-radius: 12px;
+      border-radius: 10px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+      transition: transform 120ms ease, border-color 120ms ease, box-shadow 120ms ease;
     }
+    .card:hover { border-color: #d1d5db; transform: translateY(-1px); box-shadow: 0 2px 6px rgba(0,0,0,0.06); }
     a.card { color: inherit; text-decoration: none; }
-    .card h2 { margin: 0; font-size: 16px; }
-    .card p { margin: 0; color: #6b7280; font-size: 14px; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 280px)); gap: 14px; justify-content: center; align-items: start; margin: 0 auto; max-width: 920px; width: 100%; }
+    .card h2 { margin: 0 0 6px 0; font-size: 15px; }
+    .card p { margin: 0; color: #6b7280; font-size: 13px; line-height: 1.35; }
   </style>
 </head>
 <body>
@@ -44,12 +46,12 @@
   <main>
     <div class="grid">
       <a class="card" href="./candle-jar.html">
-        <h2>Water-Rising Candle</h2>
+        <h2>Water-Rising Candle Experiment</h2>
         <p>Candles under a jar; water rises inside as oxygen is consumed.</p>
       </a>
       <a class="card" href="./soft‑body-canvas.html">
-        <h2>Soft Body Canvas</h2>
-        <p>Play with a soft-body mesh and watch it wobble.</p>
+        <h2>Pepper & Soap Experiment</h2>
+        <p>Floating pepper flees from soap due to surface tension changes.</p>
       </a>
     </div>
   </main>
